--- a/public/styles/contact.css
+++ b/public/styles/contact.css
@@ -10,7 +10,7 @@
   border-left: solid 10px #538dbc;
   box-shadow: 0 0 40px -10px #000;
   padding: 20px 30px;
-  max-width: calc(100vw - 40px);
+  max-width: calc(100% - 40px);
 }
 .form h2 {
   margin: 10px 0;
