--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -5,11 +5,15 @@
 }
 body {
     background-color: #323232;
-    width: 100vw;
+    /* width: 100%; */
+    margin: 0;
+    padding: 0;
 }
 
 #about, #portfolio, #contact {
-    width: 100vw;
+    width: 100%;
+    margin-right: 0;
+    padding-right: 0;
   }
 
 h1, h2 {
@@ -29,6 +33,7 @@ a {
 }
 
 .title {
+    width: 80vw;
     margin-left: 10vw;
     margin-bottom: 70px;
     margin-top: 50px;
@@ -45,7 +50,7 @@ footer {
     border-top: solid 10px #538dbc ;
     margin-bottom: 0px;
     margin-top: 70px ;
-    width: 100vw;
+    width: 100%;
     height: 150px;
     background-color: #424242;
     display: flex;
