--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -49,7 +49,7 @@ header nav {
 
   .btn:hover {
     background: transparent;
-    box-shadow: 0 0 20px 10px hsla(204, 70%, 53%, 0.5);
+    box-shadow: 0 0 20px 10px #538dbc81;
   }
 
   .btn:before {
