--- a/public/styles/about.css
+++ b/public/styles/about.css
@@ -9,7 +9,7 @@
 .profile {
   background-color: white;
   padding: 20px;
-  width: 20vw;
+  width: 20%;
   border-left: solid 10px #538dbc;
 }
 
@@ -60,7 +60,7 @@ h2 {
 
 .text-about {
   background-color: #434343;
-  width: 60vw;
+  width: 60%;
   padding: 20px;
   display: flex;
   flex-direction: column;
