--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -106,3 +106,20 @@
 
 
 }
+
+@media (max-height: 600px) {
+
+    .div-header  {
+        height: auto;
+    }
+    .div-header h1{
+        font-size: 10vh;
+        margin-bottom: 10px;
+    }
+
+    .div-header nav a{
+        font-size: 5vh;
+        margin: 0;
+        padding: 3px;
+    }
+}
